--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dev_dependencies:
     sdk: flutter
   mocktail: ^1.0.3
   golden_toolkit: ^0.15.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
